src/objects/dlrs__LookupParent__c.object
<CustomObject>
    <fields>
        <fullName>dlrs__Colours__c</fullName>
        <label>Colours</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dlrs__Descriptions2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Descriptions 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__Descriptions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Descriptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlrs__Total2__c</fullName>
        <label>Total 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dlrs__Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Lookup Parent</label>
    <listViews>
        <fullName>dlrs__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Lookup Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Parents</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>dlrs__Not_42</fullName>
        <active>true</active>
        <errorConditionFormula>dlrs__Total__c !=42</errorConditionFormula>
        <errorDisplayField>dlrs__Total__c</errorDisplayField>
        <errorMessage>The answer is not 42!</errorMessage>
    </validationRules>
</CustomObject>